syntax = "proto3";
package sgc7pb;
option go_package = "github.com/zhs007/slotsgamecore7/sgc7pb";

// ComponentData
message ComponentData {
    repeated int32 usedScenes = 1;
    repeated int32 usedOtherScenes = 2;
    repeated int32 usedResults = 3;
    repeated int32 usedPrizeScenes = 4;
    int32 coinWin = 5;
    int64 cashWin = 6;
    string name = 7;
    int32 targetScene = 8;
    int32 runIndex = 9;
}

// GameParam
message GameParam {
    string firstComponent = 1;
    string nextStepFirstComponent = 2;
    map<string, ComponentData> mapComponents = 3;
}