package lowcode

import (
	sgc7game "github.com/zhs007/slotsgamecore7/game"
	"github.com/zhs007/slotsgamecore7/sgc7pb"
)

type GameParams struct {
	sgc7pb.GameParam `json:",inline"`
	LastScene        *sgc7game.GameScene `json:"-"`
	LastOtherScene   *sgc7game.GameScene `json:"-"`
}

// gIsForceDisableStats - disable stats
var gIsForceDisableStats bool

// SetForceDisableStats - disable stats
func SetForceDisableStats() {
	gIsForceDisableStats = true
}
